Fixed using sonarqube